[gd_scene load_steps=2 format=2]

[ext_resource path="res://GameFile/EndlessWaves/Defender/BassicBullet/BassicBullet.gd" type="Script" id=1]

[node name="BassicBullet" type="Area2D"]
collision_layer = 16
collision_mask = 8
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
